# kcare_robotics_sdk_ros2

./: .gitattributes  .gitignore  .gitmodules  README.md  UfactoryXarm7Manual.md  a.md  requirements.txt
kcare_description/: CMakeLists.txt  README.md  package.xml
kcare_description/launch/: femto_display.launch.py  gemini_display.launch.py  robot_display.launch.py  slambase_display.launch.py  visualize_femto.launch.py  visualize_gemini.launch.py  visualize_robot.launch.py  visualize_slamware.launch.py
kcare_description/robots/: _test_.urdf.xacro  clo_elevation.urdf.xacro  device_clober.urdf.xacro  device_head.urdf.xacro  (+11 more)
kcare_robot_cplus_controller/: CMakeLists.txt  package.xml
kcare_robot_ros2_controller/: package.xml  requirements.txt  setup.cfg  setup.py
kcare_robot_ros2_controller_msgs/: CMakeLists.txt  package.xml
scripts/: slam_package_setup.bash
src/kcare_description/: CMakeLists.txt  package.xml
src/kcare_description/launch/: clobot_display.launch.py  kcare_clober_display.launch.py  robot_display.launch.py  test.launch.py  xarm7_display.launch.py
src/kcare_description/meshes/pan_tilt/: head_base.stl
src/kcare_description/meshes/slamware/: base_link.stl  slam_wheel.stl
src/kcare_description/robots/: _test_.urdf.xacro  device_clo_elevation.urdf.xacro  device_clober.urdf.xacro  device_d405.urdf.xacro  device_elevation.urdf.xacro  device_xarm7.urdf.xacro  gemini2.urdf.xacro  kcare_platform.urdf.xacro  slamware.urdf.xacro  xarm7.urdf.xacro
src/kcare_description/robots/common/: link.xacro
src/kcare_description/rviz/: femto_config.rviz
(+119 files in other folders)
